Another page for viewing country specific data. (#80)
* feat(api): updated api with routes for the country page

* feat(dashboard): added countries view

* feat(api): added a partial index and some cleanup accordingly

* feat(dashboard): mobile polish and regressions
